Styles System => Stable Android and iOS Update Texts.xaml and Spaces.xaml
Remarks:
When associating the themes as source of "/Styles/General.xaml" the colors of those themes implemented in Texts.xaml or other ResourceDictionary must be "DynamicResource", Grid and StackLayout base spaces are added in Spaces.xaml for all interfaces.

--- a/XF_FoodApp/XF_FoodApp/Styles/Spaces.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Spaces.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d">
-    
+
     <!-- TYPES OF SPACES-->
     <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
     <OnPlatform x:TypeArguments="Thickness" x:Key="idealSpace">
@@ -25,12 +25,32 @@
     <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 
 
-    <Style TargetType="Grid" x:Key="GridMasterSpace">
-
-        <Setter Property="RowSpacing" Value="0"/>
-        <Setter Property="ColumnSpacing" Value="0"/>
+    <!-- SPACES Grid-->
+    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <Style TargetType="Grid" x:Key="GridIdealSpace">
         <Setter Property="Padding" Value="{StaticResource idealSpace}"/>
-
     </Style>
+
+    <Style TargetType="Grid" x:Key="GridMediumSpace">
+        <Setter Property="Padding" Value="{StaticResource mediumSpace}"/>
+    </Style>
+
+    <Style TargetType="Grid" x:Key="GridBigSpace">
+        <Setter Property="Padding" Value="{StaticResource bigSpace}"/>
+    </Style>
+    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    
+
+    <!-- SPACES BASE-->
+    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+    <Style TargetType="Grid">
+        <Setter Property="RowSpacing" Value="0" />
+        <Setter Property="ColumnSpacing" Value="0" />
+    </Style>
+
+    <Style TargetType="StackLayout">
+        <Setter Property="Spacing" Value="0" />
+    </Style>
+    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 
 </ResourceDictionary>
