--- a/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
+++ b/XF_FoodApp/XF_FoodApp/Styles/Themes/WhiteTheme.xaml
@@ -7,20 +7,20 @@
                     mc:Ignorable="d"
                     Source="/Styles/General.xaml">
 
+    <Color x:Key="colAccCheck">#FFE7F9F5</Color>
+    <Color x:Key="colAccError">#FFF9E7EB</Color>
+    <Color x:Key="colAccUns">#FFF2F3F5</Color>
+    <Color x:Key="colAltQua">#FFE3E7EF</Color>
     <Color x:Key="colBG1">#FFF5F8FB</Color>
-    <Color x:Key="colBtnRemSec">#FFD4145C</Color>
-    <Color x:Key="colCombTBgS">#FFFFFFFF</Color>
-    <Color x:Key="colEnt2AccCheck">#FFE7F9F5</Color>
-    <Color x:Key="colEnt2AccError">#FFF9E7EB</Color>
-    <Color x:Key="colEnt2AccUns">#FFF2F3F5</Color>
-    <Color x:Key="colEnt2BorCheck">#FF10CA87</Color>
-    <Color x:Key="colEnt2BorError">#FFCA1030</Color>
+    <Color x:Key="colBorCheck">#FF10CA87</Color>
+    <Color x:Key="colBorError">#FFCA1030</Color>
     <Color x:Key="colPrim">#FF9A196B</Color>
-    <Color x:Key="colTxtComb23">#FF56565A</Color>
-    <Color x:Key="colTxtEnt1">#FF4D4D53</Color>
-    <Color x:Key="colTxtPrim">#FF26315F</Color>
-    <Color x:Key="colTxtRemPrim">#FFF93963</Color>
-    <Color x:Key="colTxtSub">#FFE3E7EF</Color>
-    <Color x:Key="colTxtTer">#FF000000</Color>
-    <Color x:Key="colTxtUnsPrim">#FFC7CAD1</Color>
+    <Color x:Key="colQua">#FFFFFFFF</Color>
+    <Color x:Key="colQui">#FF000000</Color>
+    <Color x:Key="colRemPrim">#FFF93963</Color>
+    <Color x:Key="colRemSec">#FFD4145C</Color>
+    <Color x:Key="colSec">#FF26315F</Color>
+    <Color x:Key="colTer">#FF56565A</Color>
+    <Color x:Key="colUnsPrim">#FFC7CAD1</Color>
+    
 </ResourceDictionary>
