Styles System => Stable Android and iOS Add Package NuGet Xamarin.Forms.DebugRainbows
Remarks:
When "Debug Rainbows" is not used, place "false" in General.xaml and refresh or save with HotReload in General.Xaml and then save App.xaml

--- a/XF_FoodApp/XF_FoodApp/AppShell.xaml
+++ b/XF_FoodApp/XF_FoodApp/AppShell.xaml
@@ -31,7 +31,7 @@
     <TabBar>
     
         <Tab Title="Explore" Icon="{StaticResource icon_tab_explore}">
-            <ShellContent ContentTemplate="{DataTemplate local:ItemsPage}" />
+            <ShellContent ContentTemplate="{DataTemplate local:Discover}" />
         </Tab>
         <Tab Title="My order" Icon="{StaticResource icon_tab_order}">
             <ShellContent ContentTemplate="{DataTemplate local:AboutPage}" />
